kernel/headers/SnapPea.h

typedef enum
{
    func_OK = 0,
    func_cancelled,
    func_failed,
    func_bad_input
} FuncResult;
typedef struct
{
    Real  real;
    Real  imag;
} Complex;
typedef char   Boolean;
typedef enum
{
    orientation_reversing = 0,
    orientation_preserving = 1,
    unknown_parity = -1
} MatrixParity;
typedef Complex SL2CMatrix[2][2];
typedef struct
{
    SL2CMatrix      matrix;
    MatrixParity    parity;
} MoebiusTransformation;
typedef Real O31Matrix[4][4];
typedef Real GL4RMatrix[4][4];
typedef Real O31Vector[4];
typedef int MatrixInt22[2][2];
typedef struct
{
    int         num_torsion_coefficients;   
    long int    *torsion_coefficients;      
} AbelianGroup;
typedef enum
{
    oriented_manifold,
    nonorientable_manifold,
    unknown_orientability
} Orientability;
typedef enum
{
    torus_cusp,
    Klein_cusp,
    unknown_topology
} CuspTopology;
typedef struct
{
    Boolean is_available;
    Boolean negative_determinant;
    Boolean negative_trace;
    int     num_LR_factors;
    char    *LR_factors;
} LRFactorization;
typedef struct
{
    O31Vector   normal;
    O31Vector   center;
    O31Vector   radialA;
    O31Vector   radialB;
    int         index;
} Shingle;
typedef struct
{
    int         num_shingles;
    Shingle     *shingles;
} Shingling;
typedef struct Triangulation                Triangulation;
typedef struct IsometryList                 IsometryList;
typedef struct SymmetryGroup                SymmetryGroup;
typedef struct SymmetryGroupPresentation    SymmetryGroupPresentation;
typedef struct TerseTriangulation           TerseTriangulation;
typedef struct NormalSurfaceList            NormalSurfaceList;
extern AbelianGroup *homology(Triangulation *manifold);
extern int  get_num_cusps(Triangulation *manifold);
extern int  get_num_or_cusps(Triangulation *manifold);
extern int  get_num_nonor_cusps(Triangulation *manifold);
extern FuncResult compute_isometries(
                                Triangulation   *manifold0,
                                Triangulation   *manifold1,
                                Boolean         *are_isometric,
                                IsometryList    **isometry_list,
                                IsometryList    **isometry_list_of_links);
extern void Moebius_to_O31(MoebiusTransformation *A, O31Matrix B);
extern void O31_to_Moebius(O31Matrix B, MoebiusTransformation *A);
extern void Moebius_array_to_O31_array( MoebiusTransformation   arrayA[],
                                        O31Matrix               arrayB[],
                                        int                     num_matrices);
extern void O31_array_to_Moebius_array( O31Matrix               arrayB[],
                                        MoebiusTransformation   arrayA[],
                                        int                     num_matrices);
extern Boolean O31_determinants_OK( O31Matrix   arrayB[],
                                    int         num_matrices,
                                    Real      epsilon);
 extern FuncResult matrix_generators( Triangulation           *manifold,
				      MoebiusTransformation   generators[]);
extern void verify_my_malloc_usage(void);
extern FuncResult find_normal_surfaces( Triangulation       *manifold,
                                        NormalSurfaceList   **surface_list);
extern int      number_of_normal_surfaces_on_list(
                    NormalSurfaceList   *surface_list);
extern Boolean  normal_surface_is_orientable(
                    NormalSurfaceList   *surface_list,
                    int                 index);
extern Boolean  normal_surface_is_two_sided(
                    NormalSurfaceList   *surface_list,
                    int                 index);
extern int      normal_surface_Euler_characteristic(
                    NormalSurfaceList   *surface_list,
                    int                 index);
extern void free_normal_surfaces(NormalSurfaceList *surface_list);
extern FuncResult split_along_normal_surface(
                                    NormalSurfaceList   *surface_list,
                                    int                 index,
                                    Triangulation       *pieces[2]);
extern Real       gl4R_determinant(GL4RMatrix m);
extern Real       o31_trace(O31Matrix m);
extern void reorient(Triangulation *manifold);
extern void bundle_LR_to_monodromy( LRFactorization *anLRFactorization,
                                    MatrixInt22     aMonodromy);
extern void bundle_monodromy_to_LR( MatrixInt22     aMonodromy,
                                    LRFactorization **anLRFactorization);
extern LRFactorization *alloc_LR_factorization(int aNumFactors);
extern void free_LR_factorization(LRFactorization *anLRFactorization);
extern Triangulation *triangulate_punctured_torus_bundle(
                                    LRFactorization *anLRFactorization);
extern void rehydrate_census_manifold(
                                TersestTriangulation    tersest,
                                int                     which_census,
                                int                     which_manifold,
                                Triangulation           **manifold);
RepresentationList *find_representations(   Triangulation       *manifold,
                                            int                 n,
                                            PermutationSubgroup range);
void free_representation_list(
    RepresentationList *representation_list);
RepresentationIntoSn *initialize_new_representation(
      int num_original_generators,
      int n,
      int num_cusps);
RepresentationIntoSn *convert_candidateSn_to_original_generators(
     int **candidateSn,
     int n,
     int num_original_generators,
     int **original_generators,
     Triangulation *manifold,
     int **meridians,
     int **longitudes);
void free_representation(
     RepresentationIntoSn *representation,
     int                  num_generators,
     int                  num_cusps);
Boolean candidateSn_is_valid(
     int **candidateSn,
     int n,
     int **group_relations,
     int num_relations);
Boolean candidateSn_is_transitive(
     int **candidateSn,
     int num_generators,
     int n);
extern Shingling *make_shingling(WEPolyhedron *polyhedron, int num_layers);
extern void free_shingling(Shingling *shingling);
extern void compute_center_and_radials( Shingle     *shingle,
                                        O31Matrix   position,
                                        Real      scale);
extern Complex cusp_modulus(Complex cusp_shape);
extern void shortest_cusp_basis(    Complex     cusp_shape,
                                    MatrixInt22 basis_change);
extern Complex transformed_cusp_shape(    Complex       cusp_shape,
                                    CONST MatrixInt22   basis_change);
extern void install_shortest_bases( Triangulation   *manifold);
extern void basic_simplification(Triangulation *manifold);
extern void randomize_triangulation(Triangulation *manifold);
extern Complex  sl2c_determinant(CONST SL2CMatrix m);
extern FuncResult compute_symmetry_group(
                        Triangulation   *manifold,
                        SymmetryGroup   **symmetry_group_of_manifold,
                        SymmetryGroup   **symmetry_group_of_link,
                        Triangulation   **symmetric_triangulation,
                        Boolean         *is_full_group);
extern void free_symmetry_group(SymmetryGroup *symmetry_group);
extern Boolean symmetry_group_is_abelian(   SymmetryGroup   *symmetry_group,
                                            AbelianGroup    **abelian_description);
extern Boolean symmetry_group_is_dihedral(SymmetryGroup *symmetry_group);
extern Boolean symmetry_group_is_polyhedral(SymmetryGroup   *symmetry_group,
                                            Boolean         *is_full_group,
                                            int             *p,
                                            int             *q,
                                            int             *r);
extern Boolean symmetry_group_is_S5(SymmetryGroup *symmetry_group);
extern Boolean symmetry_group_is_direct_product(SymmetryGroup *symmetry_group);
extern SymmetryGroup *get_symmetry_group_factor(SymmetryGroup   *symmetry_group,
                                                int             factor_number);
extern Boolean symmetry_group_is_amphicheiral(SymmetryGroup *symmetry_group);
extern Boolean symmetry_group_invertible_knot(SymmetryGroup *symmetry_group);
extern int symmetry_group_order(SymmetryGroup *symmetry_group);
extern int symmetry_group_product(SymmetryGroup *symmetry_group, int i, int j);
extern int symmetry_group_order_of_element(SymmetryGroup *symmetry_group, int i);
extern IsometryList *get_symmetry_list(SymmetryGroup *symmetry_group);
extern SymmetryGroup *get_commutator_subgroup(SymmetryGroup *symmetry_group);
extern SymmetryGroup *get_abelianization     (SymmetryGroup *symmetry_group);
extern SymmetryGroup *get_center(SymmetryGroup *symmetry_group);
extern SymmetryGroupPresentation *get_symmetry_group_presentation(
                                        SymmetryGroup   *symmetry_group);
extern int sg_get_num_generators(SymmetryGroupPresentation *group);
extern int sg_get_num_relations(SymmetryGroupPresentation *group);
extern int sg_get_num_factors(  SymmetryGroupPresentation   *group,
                                int                         which_relation);
extern void sg_get_factor(  SymmetryGroupPresentation   *group,
                            int                         which_relation,
                            int                         which_factor,
                            int                         *generator,
                            int                         *power);
extern void free_symmetry_group_presentation(SymmetryGroupPresentation *group);
extern TerseTriangulation *tri_to_terse(Triangulation *manifold);
extern TerseTriangulation *tri_to_canonical_terse(
                            Triangulation   *manifold,
                            Boolean         respect_orientation);
extern Triangulation *terse_to_tri(TerseTriangulation *tt);
extern void free_terse_triangulation(TerseTriangulation *tt);
extern void terse_to_tersest(   TerseTriangulation      *terse,
                                TersestTriangulation    tersest);
extern void tersest_to_terse(   TersestTriangulation    tersest,
                                TerseTriangulation      **terse);
extern void tri_to_tersest(     Triangulation           *manifold,
                                TersestTriangulation    tersest);
extern void tersest_to_tri(     TersestTriangulation    tersest,
                                Triangulation           **manifold);
extern void data_to_triangulation(  TriangulationData   *data,
                                    Triangulation       **manifold_ptr);
extern void triangulation_to_data(  Triangulation       *manifold,
                                    TriangulationData   **data_ptr);
extern void free_triangulation_data(TriangulationData *data);
extern void free_triangulation(Triangulation *manifold);
extern void copy_triangulation(Triangulation *source, Triangulation **destination);
extern void two_bridge( Triangulation *manifold,
                        Boolean *is_two_bridge, long int *p, long int *q);
extern Real volume(Triangulation *manifold, int *precision);